[gd_scene load_steps=3 format=3 uid="uid://gcwtjdhvkcgj"]

[ext_resource type="Script" uid="uid://dqjivdddm47jo" path="res://GUI/Upgrades/upgrade_card.gd" id="1_fuyh5"]
[ext_resource type="Texture2D" uid="uid://b0fbo4j6croyq" path="res://GUI/Upgrades/Icons/Arm.png" id="2_k7jgt"]

[node name="UpgradeCard" type="Button"]
custom_minimum_size = Vector2(150, 250)
offset_right = 150.0
offset_bottom = 255.0
script = ExtResource("1_fuyh5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(147.815, 0)
layout_mode = 0
offset_left = 2.0
offset_top = 52.0
offset_right = 149.815
offset_bottom = 291.0
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Title"
horizontal_alignment = 1

[node name="IconTexture" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
texture = ExtResource("2_k7jgt")
stretch_mode = 5

[node name="DescLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(82.995, 150)
layout_mode = 2
text = "This will buff you alot i know this sound bulls"
autowrap_mode = 3
